--- a/catalog.html
+++ b/catalog.html
@@ -73,19 +73,15 @@
               <li><a class="main-navigation__header-link" href="#">Каталог товаров</a>
                 <!-- здесь будет выпадающее меню -->
                 <ul class="main-navigation__popup-list">
-                  <div class="main-navigation-popup-list__column-1">
-                    <li><a class="main-navigation-popup__item" href="#">Виртуальная реальность</a></li>
-                    <li><a class="main-navigation-popup__item">Моноподы для селфи</a></li>
-                    <li><a class="main-navigation-popup__item" href="#">Экшн-камеры</a></li>
-                  </div>
-                  <div class="main-navigation-popup-list__column-2">
-                    <li><a class="main-navigation-popup__item" href="#">Фитнес-браслеты</a></li>
-                    <li><a class="main-navigation-popup__item" href="#">Умные часы</a></li>
-                  </div>
-                  <div class="main-navigation-popup-list__column-3">
-                    <li><a class="main-navigation-popup__item" href="#">Квадракоптеры</a></li>
-                  </div>
-                </ul>
+
+                  <li><a class="main-navigation-popup__item" href="#">Виртуальная реальность</a></li>
+                  <li><a class="main-navigation-popup__item" href="#">Фитнес-браслеты</a></li>
+                  <li><a class="main-navigation-popup__item" href="#">Квадракоптеры</a></li>
+                  <li><a class="main-navigation-popup__item" href="catalog.html">Моноподы для селфи</a></li>
+                  <li><a class="main-navigation-popup__item" href="#">Умные часы</a></li>
+                  <li><a class="main-navigation-popup__item" href="#">Экшн-камеры</a></li>
+
+                  </ul>
               </li>
               <div class="navigation-list__services-links">
                 <li><a class="main-navigation__header-link main-navigation__header-link--delivery" href="#">Доставка</a></li>
