--- a/catalog.html
+++ b/catalog.html
@@ -45,54 +45,56 @@
 
   <body>
 
-      <header class="main-header">
-        <div class="main-header__wrapper">
-          <a class="logo-device header__logo-device" href="index.html">
-            <svg class="header__logo-device-svg" xmlns="http://www.w3.org/2000/svg" width="163" height="35" viewBox="0 0 163 35">
-              <path d="M-.151.702v33.6h13.532a15.72 15.72 0 0 0 11.72-4.824 16.458 16.458 0 0 0 4.712-11.976 16.458 16.458 0 0 0-4.712-11.976A15.723 15.723 0 0 0 13.381.702H-.151zM7.582 26.91V8.091h5.8a8.646 8.646 0 0 1 6.5 2.568 9.407 9.407 0 0 1 2.489 6.84 9.406 9.406 0 0 1-2.489 6.84 8.642 8.642 0 0 1-6.5 2.568h-5.8zm34.8-5.952h12.082v-7.3H42.378V8.091h13.291V.702H34.645v33.6H55.91V26.91H42.378v-5.952zm36.343 13.344L89.744.702h-8.458l-7.491 24.72L66.304.702h-8.457l11.019 33.6h9.859zm14.4 0h7.733V.702h-7.733v33.6zm38.615-1.416a15.506 15.506 0 0 0 6.041-5.688l-6.67-3.84a7.482 7.482 0 0 1-3.165 3.024 9.87 9.87 0 0 1-4.664 1.1 9.595 9.595 0 0 1-7.177-2.736 9.909 9.909 0 0 1-2.682-7.248 9.909 9.909 0 0 1 2.682-7.248 9.595 9.595 0 0 1 7.177-2.736 9.897 9.897 0 0 1 4.639 1.08 7.592 7.592 0 0 1 3.19 3.048l6.67-3.84a15.873 15.873 0 0 0-6.09-5.688 17.42 17.42 0 0 0-8.409-2.088c-9.779-.272-17.797 7.691-17.591 17.472-.208 9.781 7.809 17.747 17.588 17.476a17.52 17.52 0 0 0 8.458-2.088zm17.881-11.928h12.082v-7.3h-12.085V8.091h13.29V.702h-21.023v33.6h21.265V26.91h-13.532v-5.952z" class="cls-1" data-name="-e-logo"/>
-            </svg>
-          </a>
-          <div class="main-header__top-menu">
-            <form class="main-header__search">
-              <input class="search__input" type="text" placeholder="Поиск по сайту">
-              <button class="search__button" type="submit">найти</button>
-            </form>
-            <div class="main-header__navigation-wrapper">
-              <ul class="main-header__user-navigation">
-                <li><a class="main-header__navigation-item main-header-navigation-item__user" href="#">Войти</a></li>
-              </ul>
-              <ul class="main-header__goods-action">
-                <li><a class="main-header__navigation-item main-header-navigation-item__compare" href="#">Сравнить</a></li>
-                <li><a class="main-header__navigation-item main-header-navigation-item__cart" href="#">Корзина</a></li>
-              </ul>
-            </div>
-          </div>
+    <header class="main-header">
+      <div class="main-header__wrapper">
 
-          <nav class="main-navigation">
-            <ul class="main-navigation__list">
-              <li><a class="main-navigation__header-link" href="#">Каталог товаров</a>
-                <!-- здесь будет выпадающее меню -->
-                <ul class="main-navigation__popup-list">
+        <a class="main-header__logo-device logo-device" href="index.html">
+          <svg xmlns="http://www.w3.org/2000/svg" width="163" height="35" viewBox="0 0 163 35">
+            <path d="M-.151.702v33.6h13.532a15.72 15.72 0 0 0 11.72-4.824 16.458 16.458 0 0 0 4.712-11.976 16.458 16.458 0 0 0-4.712-11.976A15.723 15.723 0 0 0 13.381.702H-.151zM7.582 26.91V8.091h5.8a8.646 8.646 0 0 1 6.5 2.568 9.407 9.407 0 0 1 2.489 6.84 9.406 9.406 0 0 1-2.489 6.84 8.642 8.642 0 0 1-6.5 2.568h-5.8zm34.8-5.952h12.082v-7.3H42.378V8.091h13.291V.702H34.645v33.6H55.91V26.91H42.378v-5.952zm36.343 13.344L89.744.702h-8.458l-7.491 24.72L66.304.702h-8.457l11.019 33.6h9.859zm14.4 0h7.733V.702h-7.733v33.6zm38.615-1.416a15.506 15.506 0 0 0 6.041-5.688l-6.67-3.84a7.482 7.482 0 0 1-3.165 3.024 9.87 9.87 0 0 1-4.664 1.1 9.595 9.595 0 0 1-7.177-2.736 9.909 9.909 0 0 1-2.682-7.248 9.909 9.909 0 0 1 2.682-7.248 9.595 9.595 0 0 1 7.177-2.736 9.897 9.897 0 0 1 4.639 1.08 7.592 7.592 0 0 1 3.19 3.048l6.67-3.84a15.873 15.873 0 0 0-6.09-5.688 17.42 17.42 0 0 0-8.409-2.088c-9.779-.272-17.797 7.691-17.591 17.472-.208 9.781 7.809 17.747 17.588 17.476a17.52 17.52 0 0 0 8.458-2.088zm17.881-11.928h12.082v-7.3h-12.085V8.091h13.29V.702h-21.023v33.6h21.265V26.91h-13.532v-5.952z" class="cls-1" data-name="-e-logo"/>
+          </svg>
+        </a>
 
-                  <li><a class="main-navigation-popup__item" href="#">Виртуальная реальность</a></li>
-                  <li><a class="main-navigation-popup__item" href="#">Фитнес-браслеты</a></li>
-                  <li><a class="main-navigation-popup__item" href="#">Квадракоптеры</a></li>
-                  <li><a class="main-navigation-popup__item" href="catalog.html">Моноподы для селфи</a></li>
-                  <li><a class="main-navigation-popup__item" href="#">Умные часы</a></li>
-                  <li><a class="main-navigation-popup__item" href="#">Экшн-камеры</a></li>
-
-                  </ul>
-              </li>
-              <div class="navigation-list__services-links">
-                <li><a class="main-navigation__header-link main-navigation__header-link--delivery" href="#">Доставка</a></li>
-                <li><a class="main-navigation__header-link main-navigation__header-link--warranty" href="#">Гарантия</a></li>
-                <li><a class="main-navigation__header-link main-navigation__header-link--contacts" href="#">Контакты</a></li>
-              </div>
+        <div class="main-header__top-menu">
+          <form class="main-header__search-form">
+            <input class="main-header__search-input" type="text" placeholder="Поиск по сайту">
+            <button class="main-header__search-button" type="submit">найти</button>
+          </form>
+          <div class="main-header__top-navigation-wrapper">
+            <ul class="main-header__user-navigation">
+              <li><a class="main-header__navigation-item main-header__navigation-item--user" href="#">Войти</a></li>
             </ul>
-          </nav>
-
+            <ul class="main-header__goods-action">
+              <li><a class="main-header__navigation-item main-header__navigation-item--compare" href="#">Сравнить</a></li>
+              <li><a class="main-header__navigation-item main-header__navigation-item--cart" href="#">Корзина</a></li>
+            </ul>
+          </div>
         </div>
-      </header>
+
+        <nav class="main-header__site-navigation">
+          <ul class="main-header__site-navigation-list">
+            <li><a class="main-header__navigation-header-item" href="#">Каталог товаров</a>
+              <!-- здесь будет выпадающее меню -->
+              <ul class="main-header__navigation-popup-list">
+
+                <li><a class="main-header__navigation-popup-item" href="#">Виртуальная реальность</a></li>
+                <li><a class="main-header__navigation-popup-item" href="#">Фитнес-браслеты</a></li>
+                <li><a class="main-header__navigation-popup-item" href="#">Квадракоптеры</a></li>
+                <li><a class="main-header__navigation-popup-item">Моноподы для селфи</a></li>
+                <li><a class="main-header__navigation-popup-item" href="#">Умные часы</a></li>
+                <li><a class="main-header__navigation-popup-item" href="#">Экшн-камеры</a></li>
+
+              </ul>
+            </li>
+            <div class="main-header__navigation-services-wrapper">
+              <li><a class="main-header__navigation-header-item main-header__navigation-header-item--delivery" href="#">Доставка</a></li>
+              <li><a class="main-header__navigation-header-item main-header__navigation-header-item--warranty" href="#">Гарантия</a></li>
+              <li><a class="main-header__navigation-header-item main-header__navigation-header-item--contacts" href="#">Контакты</a></li>
+            </div>
+          </ul>
+        </nav>
+
+      </div>
+    </header>
 
     <main class="inner-page-container">
 
