--- a/catalog.html
+++ b/catalog.html
@@ -200,52 +200,56 @@
           </div>
 
           <h3 class="visually-hidden">Список найденных товаров</h3>
-          <ul class="search-result__goods-list">
-            <li class="search-result__goods-item">
-              <article class="search-result__goods-card">
-                <img src="img/item-1-img.jpg" width="360" height="380" alt="Любительская селфи-палка">
-                <h4 class="search-result__googs-card-header"><a href="#">Любительская селфи-палка</a></h4>
-                <p class="search-result__googs-card-price">500р.</p>
-                <a class="search-result__googs-card-button-cart" href="#">В корзину</a>
-                <a class="search-result__googs-card-button-compare" href="#">Добавить к сравнению</a>
-              </article>
-            </li>
-            <li class="search-result-goods__item">
-              <article class="search-result__goods-card">
-                <img src="img/item-2-img.jpg" width="360" height="380" alt="Профессиональная селфи-палка">
-                <h4 class="search-result__googs-card-header"><a href="#">Профессиональная селфи-палка</a></h4>
-                <p class="search-result__googs-card-price">1 500р.</p>
-                <a class="search-result__googs-card-button-cart" href="#">В корзину</a>
-                <a class="search-result__googs-card-button-compare" href="#">Добавить к сравнению</a>
-              </article>
-            </li>
-            <li>
-              <article class="search-result__goods-card">
-                <img src="img/item-3-img.jpg" width="360" height="380" alt="Непотопляемая селфи-палка">
-                <h4 class="search-result__googs-card-header"><a href="#">Непотопляемая селфи-палка</a></h4>
-                <p class="search-result__googs-card-price">2 500р.</p>
-                <a class="search-result__googs-card-button-cart" href="#">В корзину</a>
-                <a class="search-result__googs-card-button-compare" href="#">Добавить к сравнению</a>
-              </article>
-            </li>
-            <li>
-              <article class="search-result__goods-card">
-                <img src="img/item-4-img.jpg" width="360" height="380" alt="Селфи-палка &quot;Следуй за мной&quot;">
-                <h4 class="search-result__googs-card-header"><a href="#">Селфи-палка "Следуй за мной</a>"</h4>
-                <p class="search-result__googs-card-price">4 900р.</p>
-                <a class="search-result__googs-card-button-cart" href="#">В корзину</a>
-                <a class="search-result__googs-card-button-compare" href="#">Добавить к сравнению</a>
-              </article>
-            </li>
-          </ul>
+          <div class="search-result__goods-list-wrapper">
+            <ul class="search-result__goods-list">
+              <li class="search-result__goods-item">
+                <article class="search-result__goods-card">
+                  <img src="img/item-1-img.jpg" width="360" height="380" alt="Любительская селфи-палка">
+                  <h4 class="search-result__googs-card-header"><a href="#">Любительская селфи-палка</a></h4>
+                  <p class="search-result__googs-card-price">500р.</p>
+                  <a class="search-result__googs-card-button-cart" href="#">В корзину</a>
+                  <a class="search-result__googs-card-button-compare" href="#">Добавить к сравнению</a>
+                </article>
+              </li>
+              <li class="search-result__goods-item">
+                <article class="search-result__goods-card">
+                  <img src="img/item-2-img.jpg" width="360" height="380" alt="Профессиональная селфи-палка">
+                  <h4 class="search-result__googs-card-header"><a href="#">Профессиональная селфи-палка</a></h4>
+                  <p class="search-result__googs-card-price">1 500р.</p>
+                  <a class="search-result__googs-card-button-cart" href="#">В корзину</a>
+                  <a class="search-result__googs-card-button-compare" href="#">Добавить к сравнению</a>
+                </article>
+              </li>
+              <li class="search-result__goods-item">
+                <article class="search-result__goods-card">
+                  <img src="img/item-3-img.jpg" width="360" height="380" alt="Непотопляемая селфи-палка">
+                  <h4 class="search-result__googs-card-header"><a href="#">Непотопляемая селфи-палка</a></h4>
+                  <p class="search-result__googs-card-price">2 500р.</p>
+                  <a class="search-result__googs-card-button-cart" href="#">В корзину</a>
+                  <a class="search-result__googs-card-button-compare" href="#">Добавить к сравнению</a>
+                </article>
+              </li>
+              <li class="search-result__goods-item">
+                <article class="search-result__goods-card">
+                  <img src="img/item-4-img.jpg" width="360" height="380" alt="Селфи-палка &quot;Следуй за мной&quot;">
+                  <h4 class="search-result__googs-card-header"><a href="#">Селфи-палка "Следуй за мной</a>"</h4>
+                  <p class="search-result__googs-card-price">4 900р.</p>
+                  <a class="search-result__googs-card-button-cart" href="#">В корзину</a>
+                  <a class="search-result__googs-card-button-compare" href="#">Добавить к сравнению</a>
+                </article>
+              </li>
+            </ul>
+          </div>
 
           <h3 class="visually-hidden">Навигация по страницам</h3>
           <ul class="search-result__page-navigation">
-            <li class="search-result__page-navigation-item"><a href="#">Назад</a></li>
-            <li class="search-result__page-navigation-item"><a href="#">1</a></li>
-            <li class="search-result__page-navigation-item"><a href="#">2</a></li>
-            <li class="search-result__page-navigation-item"><a href="#">3</a></li>
-            <li class="search-result__page-navigation-item"><a href="#">Вперед</a></li>
+            <li class="search-result__page-navigation-item--back"><a class="search-result__page-navigation-link" href="#">Назад</a></li>
+            <div class="search-result__page-navigation-number-wrapper">
+              <li class="search-result__page-navigation-item"><a class="search-result__page-navigation-link" href="#">1</a></li>
+              <li class="search-result__page-navigation-item"><a class="search-result__page-navigation-link" href="#">2</a></li>
+              <li class="search-result__page-navigation-item"><a class="search-result__page-navigation-link" href="#">3</a></li>
+            </div>
+            <li class="search-result__page-navigation-item--forward"><a class="search-result__page-navigation-link" href="#">Вперед</a></li>
           </ul>
         </section>
 
